--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,18 @@ body.locked {
     padding: 0 10px;
   }
 }
+[class*=__button] {
+  background: #118DA8;
+  color: #fff;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+[class*=__button]:hover {
+  background-color: #0a6a80;
+}
+
 .navbar {
   position: fixed;
   width: 100%;
@@ -101,6 +113,16 @@ body.locked {
   color: #118DA8;
 }
 
+@media (max-width: 1299.98px) {
+  .navbar__body {
+    height: 80px;
+  }
+}
+@media (max-width: 991.98px) {
+  .navbar__body {
+    height: 60px;
+  }
+}
 @media (max-width: 767.98px) {
   .navbar__body {
     height: 60px;
@@ -189,7 +211,7 @@ body.locked {
     padding: 80px 0 0 0;
   }
 }
-.page-header {
+.page-header__body {
   display: flex;
   align-items: center;
 }
@@ -259,7 +281,7 @@ body.locked {
   }
 }
 @media (max-width: 767.98px) {
-  .page-header {
+  .page-header__body {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -292,7 +314,7 @@ body.locked {
   }
 }
 @media (max-width: 479.98px) {
-  .page-header {
+  .page-header__body {
     padding-top: 0px;
   }
   .page-header__content {
@@ -317,5 +339,228 @@ body.locked {
 @media (max-width: 349.98px) {
   .page-header__text {
     font-size: 42px;
+  }
+}
+.latest-episodes {
+  margin-top: 90px;
+}
+.latest-episodes__titel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.latest-episodes__titel .title__text {
+  font-size: 64px;
+  line-height: 79.2px;
+  letter-spacing: 2.88 px;
+}
+.latest-episodes__titel .title__button {
+  width: 178px;
+  height: 51px;
+  font-size: 17px;
+}
+.latest-episodes__item {
+  margin-top: 60px;
+  background: #000;
+  padding: 40px;
+  border-radius: 32px;
+}
+
+.item {
+  padding: 40px;
+}
+.item__body {
+  display: flex;
+}
+.item__pic {
+  max-width: 390px;
+}
+.item__pic img {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 6px;
+  flex: 0 0 auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.item__content {
+  max-width: 770px;
+  padding-left: 53px;
+}
+.item__class span {
+  background-color: #191919;
+  color: #fff;
+  width: auto;
+  padding: 3px 6px;
+  line-height: 27px;
+  font-size: 18px;
+  text-align: center;
+  border-radius: 6px;
+}
+.item__number {
+  padding-top: 40px;
+  font-size: 17px;
+  color: #118DA8;
+}
+.item__number span {
+  font-size: 18px;
+}
+.item__title {
+  padding-top: 14px;
+  font-size: 64px;
+  line-height: 70.4px;
+  letter-spacing: 2.56px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.item__text {
+  padding-top: 26px;
+  font-size: 22px;
+  line-height: 33px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.item__button {
+  margin-top: 16px;
+  width: 208px;
+  height: 51px;
+  font-size: 18px;
+}
+
+@media (max-width: 1299.98px) {
+  .item__title {
+    font-size: 44px;
+    line-height: 47px;
+  }
+  .item__text {
+    padding-top: 26px;
+    font-size: 22px;
+    line-height: 33px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .item__button {
+    margin-top: 16px;
+  }
+}
+@media (max-width: 991.98px) {
+  .item {
+    position: relative;
+  }
+  .item__pic {
+    max-width: 390px;
+    position: relative;
+  }
+  .item__pic img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 6px;
+    flex: 0 0 auto;
+  }
+  .item__content {
+    padding-left: 30px;
+  }
+  .item__title {
+    font-size: 44px;
+    line-height: 47px;
+  }
+  .item__text {
+    padding-top: 26px;
+    font-size: 22px;
+    line-height: 33px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .item__button {
+    width: 240px;
+    position: absolute;
+    bottom: 50px;
+    left: 45px;
+  }
+}
+@media (max-width: 767.98px) {
+  .latest-episodes__titel {
+    flex-direction: column;
+  }
+  .latest-episodes__titel .title__text {
+    font-size: clamp(2.5rem, 1.429rem + 5.36vw, 4rem);
+  }
+  .latest-episodes__titel .title__button {
+    width: clamp(12.5rem, 8.036rem + 22.32vw, 18.75rem);
+    font-size: 20px;
+  }
+  .latest-episodes__item {
+    margin-top: 30px;
+  }
+  .item {
+    padding: clamp(0.938rem, 0.268rem + 3.35vw, 1.875rem);
+  }
+  .item__body {
+    display: flex;
+    flex-direction: column;
+  }
+  .item__pic {
+    max-width: none;
+    max-height: none;
+  }
+  .item__pic img {
+    max-width: 100%;
+    border-radius: 16px;
+  }
+  .item__content {
+    padding-top: 30px;
+    max-width: 770px;
+    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .item__class {
+    align-self: flex-start;
+  }
+  .item__class span {
+    font-size: 20px;
+    padding: 4px 10px;
+    border-radius: 8px;
+  }
+  .item__number {
+    align-self: flex-start;
+    font-size: 20px;
+  }
+  .item__number span {
+    font-size: 22px;
+  }
+  .item__title {
+    padding-top: 14px;
+    font-size: clamp(2.375rem, 1.393rem + 4.91vw, 3.75rem);
+    line-height: clamp(3.438rem, 2.768rem + 3.35vw, 4.375rem);
+    letter-spacing: 2.56px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .item__text {
+    -webkit-line-clamp: 5;
+  }
+  .item__button {
+    position: static;
+    width: clamp(12.5rem, 8.036rem + 22.32vw, 18.75rem);
+    font-size: 20px;
+    align-self: center;
+    margin-top: 25px;
   }
 }/*# sourceMappingURL=style.css.map */
