--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -51,6 +51,18 @@ body.locked{
 	}
 }
 
+
+[class*="__button"]{
+	background: #118DA8;
+	color: #fff;
+	border-radius: 6px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+[class*="__button"]:hover{
+	background-color: #0a6a80;
+}
+
 //* Переменные
 
 $blueGreen: #118DA8;
@@ -107,7 +119,12 @@ $almostBlack: #191919;
 		color: $blueGreen
 	}
 }
-
+@media (max-width: 1299.98px){
+	.navbar__body{height: 80px;}
+}
+@media (max-width: 991.98px){
+	.navbar__body{height: 60px;}
+}
 @media (max-width: 767.98px){
 	.navbar {
 		&__body{
@@ -207,8 +224,11 @@ $almostBlack: #191919;
 }
 //* ================Page header=====================
 .page-header {
-	display: flex;
-	align-items: center;
+	&__body{
+		display: flex;
+		align-items: center;
+
+	}
 
 	&__photo {
 		max-width: 650px;
@@ -288,10 +308,14 @@ $almostBlack: #191919;
 }
 @media (max-width: 767.98px){
 	.page-header {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		padding-top: 20px;
+		&__body{
+
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+			padding-top: 20px;
+		}
+			
 		
 		&__content {
 			padding: 40px 0 0 0px;
@@ -322,7 +346,10 @@ $almostBlack: #191919;
 }
 @media (max-width: 479.98px){
 	.page-header {
-		padding-top: 0px;
+		&__body{
+
+			padding-top: 0px;
+		}
 		&__content {
 			padding: 40px 0 0 0px;
 		}
@@ -346,5 +373,251 @@ $almostBlack: #191919;
 @media (max-width: 349.98px){
 	.page-header__text{
 		font-size: 42px;
+	}
+}
+
+//* ================Latest episodes=====================
+.latest-episodes {
+	margin-top: 90px;
+
+	&__titel {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		.title__text{
+			font-size: 64px;
+			line-height: 79.2px;
+			letter-spacing: 2.88 px;
+		}
+		.title__button{
+			width: 178px;
+			height: 51px;
+			font-size: 17px;
+		}
+	}
+
+	&__item {
+		margin-top: 60px;
+		background: #000;
+		padding: 40px;
+		border-radius: 32px;
+	}
+}
+.item {
+	padding: 40px;
+
+	&__body {
+		display: flex;
+	}
+
+	&__pic {
+		max-width: 390px;
+	}
+	&__pic img{
+		max-width: 400px;
+		max-height: 400px;
+		border-radius: 6px;
+		flex: 0 0 auto;
+		object-fit: cover;
+	}
+
+	&__content {
+		max-width: 770px;
+		padding-left: 53px;
+	}
+
+	&__class {
+			span{
+				background-color: #191919;
+				color: #fff;
+				width: auto;
+				padding: 3px 6px;
+				line-height: 27px;
+				font-size: 18px;
+				text-align: center;
+				border-radius: 6px;
+			}
+	}
+
+	&__number {
+		padding-top: 40px;
+		font-size: 17px;
+		color: $blueGreen;
+
+		span{
+			font-size: 18px;
+		}
+	}
+
+	&__title {
+		padding-top: 14px;
+		font-size: 64px;
+		line-height: 70.4px;
+		letter-spacing: 2.56px;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	&__text {
+		padding-top: 26px;
+		font-size: 22px;
+		line-height: 33px;
+		display: -webkit-box;
+		-webkit-line-clamp: 2;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	&__button {
+		margin-top: 16px;
+		width: 208px;
+		height: 51px;
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 1299.98px){
+	.item{
+		&__title{
+			font-size: 44px;
+			line-height: 47px;
+		}
+		&__text {
+			padding-top: 26px;
+			font-size: 22px;
+			line-height: 33px;
+			display: -webkit-box;
+			-webkit-line-clamp: 4;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		&__button {
+			margin-top: 16px;
+		}
+	}
+}
+@media (max-width: 991.98px){
+	.item{
+		position: relative;
+		&__pic {
+			max-width: 390px;
+			position: relative;
+		}
+		&__pic img{
+			max-width: 100%;
+			max-height: 100%;
+			border-radius: 6px;
+			flex: 0 0 auto;
+		}
+		&__content{
+			padding-left: 30px;
+		}
+		&__title{
+			font-size: 44px;
+			line-height: 47px;
+		}
+		&__text {
+			padding-top: 26px;
+			font-size: 22px;
+			line-height: 33px;
+			display: -webkit-box;
+			-webkit-line-clamp: 4;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		&__button {
+			width: 240px;
+			position: absolute;
+			bottom: 50px;
+			left: 45px;
+		}
+	}
+}
+@media (max-width: 767.98px){
+	.latest-episodes{
+		&__titel {
+			flex-direction: column;
+			.title__text{
+				font-size: clamp(2.5rem, 1.429rem + 5.36vw, 4rem);
+			}
+			.title__button{
+				width: clamp(12.5rem, 8.036rem + 22.32vw, 18.75rem);
+				font-size: 20px;
+			}
+		}
+		&__item {
+			margin-top: 30px;
+		}
+	}
+
+	.item {
+		padding: clamp(0.938rem, 0.268rem + 3.35vw, 1.875rem);
+
+		&__body {
+			display: flex;
+			flex-direction: column;
+		}
+	
+		&__pic {
+			max-width: none;
+			max-height: none;
+		}
+		&__pic img{
+			max-width: 100%;
+			border-radius: 16px;
+		}
+	
+		&__content {
+			padding-top: 30px;
+			max-width: 770px;
+			padding-left: 5px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+	
+		&__class {
+			align-self: flex-start;
+			span{
+				font-size: 20px;
+				padding: 4px 10px;
+				border-radius: 8px;
+			}
+		}
+	
+		&__number {
+			align-self: flex-start;			
+			font-size: 20px;
+			span{font-size: 22px;}
+		}
+	
+		&__title {
+			padding-top: 14px;
+			font-size: clamp(2.375rem, 1.393rem + 4.91vw, 3.75rem);
+			line-height: clamp(3.438rem, 2.768rem + 3.35vw, 4.375rem);
+			letter-spacing: 2.56px;
+			display: -webkit-box;
+			-webkit-line-clamp: 3;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+	
+		&__text {
+			-webkit-line-clamp: 5;
+		}
+		&__button {
+			position: static;
+			width: clamp(12.5rem, 8.036rem + 22.32vw, 18.75rem);
+			font-size: 20px;
+			align-self: center;
+			margin-top: 25px;
+		}
 	}
 }
