--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,6 +57,7 @@ body.locked {
   border-radius: 6px;
   cursor: pointer;
   transition: 0.3s;
+  border: none;
 }
 
 [class*=__button]:hover {
@@ -126,7 +127,7 @@ body.locked {
 @media (max-width: 767.98px) {
   .navbar__body {
     height: 60px;
-    padding: 0px 20px;
+    padding: 20px 20px;
   }
   .navbar__logo {
     font-size: 25px;
@@ -193,13 +194,13 @@ body.locked {
   }
   .navbar__link {
     display: block;
-    margin: 0px 0px 30px 0px;
+    margin: 20px 20px 30px 20px;
     font-size: 32px;
   }
 }
 @media (max-width: 479.98px) {
   .navbar__body {
-    padding: 0px 10px;
+    padding: 20px 10px;
   }
 }
 .page {
@@ -241,12 +242,19 @@ body.locked {
   color: #fff;
 }
 .page-header__icons {
-  max-width: 32px;
   display: flex;
+}
+.page-header__icons a {
+  max-width: 32px;
+  margin-top: 16px;
+  margin-right: 18px;
+  transition: 0.6s;
+}
+.page-header__icons a:hover {
+  transform: scale(1.1);
 }
 .page-header__icon {
   max-width: 100%;
-  padding: 16px 18px 0px 0px;
 }
 
 @media (max-width: 1299.98px) {
@@ -288,7 +296,7 @@ body.locked {
     padding-top: 20px;
   }
   .page-header__content {
-    padding: 40px 0 0 0px;
+    padding: 40px 0 0 20px;
     max-width: 650px;
   }
   .page-header__text {
@@ -305,20 +313,21 @@ body.locked {
     font-size: 20px;
     color: #fff;
   }
-  .page-header__icons {
-    max-width: 40px;
+  .page-header__icons a {
+    max-width: 32px;
+    margin-top: 16px;
+    margin-right: 18px;
   }
   .page-header__icon {
     max-width: 100%;
-    padding: 16px 18px 0px 0px;
   }
 }
 @media (max-width: 479.98px) {
   .page-header__body {
-    padding-top: 0px;
+    padding-top: 20px;
   }
   .page-header__content {
-    padding: 40px 0 0 0px;
+    padding: 40px 0 0 20px;
   }
   .page-header__text {
     font-size: 48px;
@@ -562,5 +571,249 @@ body.locked {
     font-size: 20px;
     align-self: center;
     margin-top: 25px;
+  }
+}
+.about {
+  padding-top: 260px;
+}
+.about__body {
+  display: flex;
+}
+.about__content {
+  padding-right: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.about__title {
+  font-size: clamp(2.5rem, 1.99rem + 2.55vw, 4.063rem);
+  line-height: 79px;
+}
+.about__text p {
+  padding-top: 20px;
+}
+.about__text {
+  font-size: 22px;
+  line-height: 33px;
+}
+.about__pic {
+  max-width: 650px;
+}
+.about__pic img {
+  max-width: clamp(25rem, 2.444rem + 46.99vw, 40.625rem);
+  border-radius: 12px;
+  flex: 0 0 auto;
+}
+
+.circle__body {
+  position: relative;
+  width: 110px;
+  height: 110px;
+  border-radius: 100px;
+  background-color: #118DA8;
+  cursor: pointer;
+  transition: 0.6s;
+}
+.circle__body:hover {
+  transform: scale(1.05);
+}
+.circle__arrow {
+  position: absolute;
+  top: 54px;
+  left: 18px;
+  width: 70px;
+  height: 2px;
+  background-color: #fff;
+}
+.circle__arrow::before, .circle__arrow::after {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background-color: #fff;
+}
+.circle__arrow::before {
+  top: 10px;
+  left: 44px;
+  transform: rotate(-45deg);
+}
+.circle__arrow::after {
+  bottom: 10px;
+  left: 44px;
+  transform: rotate(45deg);
+}
+.circle__label {
+  font-size: 18px;
+  line-height: 27px;
+  color: #118DA8;
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+  .about {
+    position: relative;
+  }
+  .about__pic img {
+    max-width: 400px;
+  }
+  .circle {
+    position: absolute;
+    top: 270px;
+    left: 33%;
+  }
+  .circle__body {
+    width: 90px;
+    height: 90px;
+  }
+  .circle__arrow {
+    top: 44px;
+    left: 18px;
+    width: 55px;
+  }
+  .circle__arrow::before, .circle__arrow::after {
+    width: 25px;
+  }
+  .circle__arrow::before {
+    top: 9px;
+    left: 33px;
+  }
+  .circle__arrow::after {
+    bottom: 9px;
+    left: 33px;
+  }
+  .circle__label {
+    display: none;
+  }
+}
+@media (max-width: 767.98px) {
+  .about {
+    padding-top: 150px;
+  }
+  .about__body {
+    flex-direction: column-reverse;
+  }
+  .about__content {
+    padding-right: 20px;
+  }
+  .about__title {
+    line-height: 60px;
+  }
+  .about__text p {
+    padding-top: 15px;
+  }
+  .about__pic {
+    max-width: none;
+    margin: 0 auto;
+  }
+  .about__pic img {
+    max-width: 100%;
+    border-radius: 12px;
+    flex: 0 0 auto;
+  }
+  .circle {
+    margin: 20px 0px 0px 20px;
+  }
+  .circle__body {
+    position: relative;
+    width: 90px;
+    height: 90px;
+  }
+  .circle__arrow {
+    top: 44px;
+    left: 18px;
+    width: 55px;
+  }
+  .circle__arrow::before, .circle__arrow::after {
+    width: 25px;
+  }
+  .circle__arrow::before {
+    top: 9px;
+    left: 33px;
+  }
+  .circle__arrow::after {
+    bottom: 9px;
+    left: 33px;
+  }
+}
+.subscribe {
+  margin-top: 200px;
+}
+.subscribe__body {
+  display: flex;
+  background: #000;
+  padding: 60px;
+  border-radius: 32px;
+  max-height: 390px;
+}
+.subscribe__content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  padding-right: clamp(3.125rem, -6491.875rem + 8000vw, 8.125rem);
+}
+.subscribe__subtitle {
+  font-size: 18px;
+  line-height: 27px;
+  color: #118DA8;
+}
+.subscribe__title {
+  font-size: clamp(3.75rem, -970.5rem + 1200vw, 4.5rem);
+  line-height: 79px;
+  letter-spacing: 2.88px;
+}
+.subscribe__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.subscribe__name, .subscribe__email {
+  height: clamp(4.688rem, -563.625rem + 700vw, 5.125rem);
+  padding: 26px 19px;
+  margin-bottom: 20px;
+  border-radius: 6px;
+  background-color: #191919;
+  color: #fff;
+  font-size: 24px;
+  line-height: 29px;
+  box-sizing: border-box;
+  border: none;
+}
+.subscribe__name::-moz-placeholder, .subscribe__email::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+.subscribe__name:-ms-input-placeholder, .subscribe__email:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+.subscribe__name::placeholder, .subscribe__email::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
+.subscribe__button {
+  width: 90px;
+  height: 50px;
+  font-size: 15px;
+}
+
+@media (max-width: 992px) {
+  .subscribe {
+    margin-top: 100px;
+  }
+  .subscribe__body {
+    flex-direction: column;
+    padding: clamp(1.25rem, 0.655rem + 2.98vw, 2.5rem);
+  }
+  .subscribe__content {
+    width: 100%;
+  }
+  .subscribe__title {
+    font-size: clamp(2.5rem, 1.99rem + 2.55vw, 4.063rem);
+    line-height: clamp(3.063rem, 2.467rem + 2.98vw, 4.313rem);
+    padding-bottom: 20px;
+  }
+  .subscribe__form {
+    width: 100%;
+  }
+  .subscribe__button {
+    align-self: center;
+    width: 40%;
+    font-size: 22px;
   }
 }/*# sourceMappingURL=style.css.map */
