--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -58,6 +58,7 @@ body.locked{
 	border-radius: 6px;
 	cursor: pointer;
 	transition: 0.3s;
+	border: none;
 }
 [class*="__button"]:hover{
 	background-color: #0a6a80;
@@ -68,7 +69,7 @@ body.locked{
 $blueGreen: #118DA8;
 $almostBlack: #191919;
 
-//* ==================Navigation===================
+//* ================== Navigation ===================
 
 .navbar {
 	position: fixed;
@@ -129,7 +130,7 @@ $almostBlack: #191919;
 	.navbar {
 		&__body{
 			height: 60px;
-			padding: 0px 20px;
+			padding: 20px 20px;
 		}
 		&__logo{
 			font-size: 25px;
@@ -200,7 +201,7 @@ $almostBlack: #191919;
 		}
 		&__link {
 			display: block;
-			margin: 0px 0px 30px 0px;
+			margin: 20px 20px 30px 20px;
 			font-size: 32px;
 		}
 	}
@@ -208,11 +209,11 @@ $almostBlack: #191919;
 }
 @media (max-width: 479.98px){
 	.navbar__body{
-		padding: 0px 10px;
+		padding: 20px 10px;
 	}
 }
 
-//* ==============Main page===================
+//* ============== Main page ===================
 .page{
 	padding: 150px 0 0 0;
 }
@@ -222,14 +223,13 @@ $almostBlack: #191919;
 		padding: 80px 0 0 0;
 	}
 }
-//* ================Page header=====================
+//* ================ Page header =====================
 .page-header {
 	&__body{
 		display: flex;
 		align-items: center;
 
 	}
-
 	&__photo {
 		max-width: 650px;
 	}
@@ -262,13 +262,19 @@ $almostBlack: #191919;
 	}
 
 	&__icons {
-		max-width: 32px;
 		display: flex;
-
+	}
+	&__icons a{
+		max-width: 32px;
+		margin-top: 16px;
+		margin-right: 18px;
+		transition: 0.6s;
+	}
+	&__icons a:hover{
+		transform: scale(1.1);
 	}
 	&__icon{
 		max-width: 100%;
-		padding: 16px 18px 0px 0px;
 	}
 }
 @media (max-width: 1299.98px){
@@ -315,10 +321,8 @@ $almostBlack: #191919;
 			flex-direction: column;
 			padding-top: 20px;
 		}
-			
-		
 		&__content {
-			padding: 40px 0 0 0px;
+			padding: 40px 0 0 20px;
 			max-width: 650px;
 		}
 		&__text {
@@ -335,12 +339,14 @@ $almostBlack: #191919;
 			font-size: 20px;
 			color: #fff;
 		}
-		&__icons {
-			max-width: 40px;
+		&__icons a{
+			max-width: 32px;
+			margin-top: 16px;
+			margin-right: 18px;
+			
 		}
 		&__icon{
 			max-width: 100%;
-			padding: 16px 18px 0px 0px;
 		}
 	}
 }
@@ -348,10 +354,10 @@ $almostBlack: #191919;
 	.page-header {
 		&__body{
 
-			padding-top: 0px;
+			padding-top: 20px;
 		}
 		&__content {
-			padding: 40px 0 0 0px;
+			padding: 40px 0 0 20px;
 		}
 		&__text {
 			font-size: 48px;
@@ -376,7 +382,7 @@ $almostBlack: #191919;
 	}
 }
 
-//* ================Latest episodes=====================
+//* ================ Latest episodes =====================
 .latest-episodes {
 	margin-top: 90px;
 
@@ -618,6 +624,263 @@ $almostBlack: #191919;
 			font-size: 20px;
 			align-self: center;
 			margin-top: 25px;
+		}
+	}
+}
+
+//* ================ About =====================
+.about {
+	padding-top: 260px;
+
+	&__body {
+		display: flex;
+	}
+	&__content {
+		padding-right: 80px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	&__title {
+		font-size: clamp(2.5rem, 1.99rem + 2.55vw, 4.063rem);
+		line-height: 79px;
+	}
+	&__text p{
+		padding-top: 20px;
+	}
+	&__text {
+		font-size: 22px;
+		line-height: 33px;
+	}
+	&__pic {
+		max-width: 650px;
+	}
+	&__pic img{
+		max-width: clamp(25rem, 2.444rem + 46.99vw, 40.625rem);
+		border-radius: 12px;
+		flex: 0 0 auto;
+	}
+}
+.circle {
+
+	&__body {
+		position: relative;
+		width: 110px;
+		height: 110px;
+		border-radius: 100px;
+		background-color: $blueGreen;
+		cursor: pointer;
+		transition: 0.6s;
+	}
+	&__body:hover{
+		transform: scale(1.05);
+	}
+
+	&__arrow {
+		position: absolute;
+		top: 54px;
+		left: 18px;
+		width: 70px;
+		height: 2px;
+		background-color: #fff;
+	}
+	&__arrow::before,
+	&__arrow::after{
+		content: '';
+		position: absolute;
+		width: 30px;
+		height: 2px;
+		background-color: #fff;
+	}
+	&__arrow::before{
+		top: 10px;
+		left: 44px;
+		transform: rotate(-45deg);
+	}
+	&__arrow::after{
+		bottom: 10px;
+		left: 44px;
+		transform: rotate(45deg);
+	}
+	&__label {
+		font-size: 18px;
+		line-height: 27px;
+		color: $blueGreen;
+	}
+}
+
+@media (max-width: 992px) and (min-width:768px){
+	.about{
+		position: relative;
+
+		&__pic img{
+			max-width: 400px;
+		}
+	}
+
+	.circle{
+		position: absolute;
+		top: 270px;
+		left: 33%;
+
+		&__body{
+			width: 90px;
+			height: 90px;
+		}
+		&__arrow {
+			top: 44px;
+			left: 18px;
+			width: 55px;
+		}
+		&__arrow::before,
+		&__arrow::after{
+			width: 25px;
+		}
+		&__arrow::before{
+			top: 9px;
+			left: 33px;
+		}
+		&__arrow::after{
+			bottom: 9px;
+			left: 33px;
+		}
+		&__label {
+			display: none;
+		}
+	}
+}
+@media (max-width: 767.98px){
+	.about{
+		padding-top: 150px;
+
+		&__body {
+			flex-direction: column-reverse;
+		}
+		&__content {
+			padding-right: 20px;
+		}
+		&__title {
+			line-height: 60px;
+		}
+		&__text p{
+			padding-top: 15px;
+		}
+		&__pic {
+			max-width: none;
+			margin: 0 auto;
+		}
+		&__pic img{
+			max-width: 100%;
+			border-radius: 12px;
+			flex: 0 0 auto;
+		}
+	}
+	.circle{
+		margin: 20px 0px 0px 20px;
+		&__body {
+			position: relative;
+			width: 90px;
+			height: 90px;
+		}
+		&__arrow {
+			top: 44px;
+			left: 18px;
+			width: 55px;
+		}
+		&__arrow::before,
+		&__arrow::after{
+			width: 25px;
+		}
+		&__arrow::before{
+			top: 9px;
+			left: 33px;
+		}
+		&__arrow::after{
+			bottom: 9px;
+			left: 33px;
+		}
+	}
+}
+
+//* ================ Subscribe =====================
+.subscribe {
+	margin-top: 200px;
+
+	&__body {
+		display: flex;
+		background: #000;
+		padding: 60px;
+		border-radius: 32px;
+		max-height: 390px;
+	}
+	&__content {
+		width: 50%;
+		display: flex;
+		flex-direction: column;
+		padding-right: clamp(3.125rem, -6491.875rem + 8000vw, 8.125rem);
+	}
+	&__subtitle {
+		font-size: 18px;
+		line-height: 27px;
+		color: $blueGreen;
+	}
+	&__title {
+		font-size: clamp(3.75rem, -970.5rem + 1200vw, 4.5rem);
+		line-height: 79px;
+		letter-spacing: 2.88px;
+	}
+	&__form {
+		width: 50%;
+		display: flex;
+		flex-direction: column;
+	}
+	&__name,
+	&__email {
+		height: clamp(4.688rem, -563.625rem + 700vw, 5.125rem);
+		padding: 26px 19px;
+		margin-bottom: 20px;
+		border-radius: 6px;
+		background-color: $almostBlack;
+		color: #fff;
+		font-size: 24px;
+		line-height: 29px;
+		box-sizing: border-box;
+		border: none;
+	}
+	&__name::placeholder,
+	&__email::placeholder{
+		color: rgba(255, 255, 255, 0.7);
+	}
+	&__button {
+		width: 90px;
+		height: 50px;
+		font-size: 15px;
+	}
+}
+
+@media (max-width: 992px){
+	.subscribe {
+		margin-top: 100px;
+	
+		&__body {
+			flex-direction: column;
+			padding: clamp(1.25rem, 0.655rem + 2.98vw, 2.5rem);
+		}
+		&__content{
+			width: 100%;
+		}
+		&__title {
+			font-size: clamp(2.5rem, 1.99rem + 2.55vw, 4.063rem);
+			line-height: clamp(3.063rem, 2.467rem + 2.98vw, 4.313rem);
+			padding-bottom: 20px;
+		}
+		&__form{
+			width: 100%;
+		}
+		&__button {
+			align-self: center;
+			width: 40%;
+			font-size: 22px;
 		}
 	}
 }
