--- a/CSS/style.css
+++ b/CSS/style.css
@@ -200,7 +200,7 @@ body.locked {
 }
 @media (max-width: 479.98px) {
   .navbar__body {
-    padding: 20px 10px;
+    padding: 20px;
   }
 }
 .page {
