--- a/CSS/style.css
+++ b/CSS/style.css
@@ -818,6 +818,14 @@ body.locked {
   }
 }
 @media (max-width: 480px) {
+  .subscribe__name, .subscribe__email {
+    height: clamp(3.438rem, 1.063rem + 10vw, 4.063rem);
+    padding: 20px 19px;
+    font-size: clamp(1.375rem, 0.9rem + 2vw, 1.5rem);
+    line-height: 29px;
+    box-sizing: border-box;
+    border: none;
+  }
   .subscribe__button {
     width: 100%;
   }
