--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -885,5 +885,16 @@ $almostBlack: #191919;
 	}
 }
 @media (max-width: 480px){
-	.subscribe__button{width: 100%;}
+	.subscribe{
+		&__name,
+		&__email {
+			height: clamp(3.438rem, 1.063rem + 10vw, 4.063rem);
+			padding: 20px 19px;
+			font-size: clamp(1.375rem, 0.9rem + 2vw, 1.5rem);
+			line-height: 29px;
+			box-sizing: border-box;
+			border: none;
+		}
+		&__button{width: 100%;}
+	}
 }
