--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body {
   height: 100%;
 }
@@ -126,7 +127,7 @@ body.locked {
 }
 @media (max-width: 767.98px) {
   .navbar__body {
-    height: 60px;
+    height: 40px;
     padding: 20px 20px;
   }
   .navbar__logo {
@@ -200,6 +201,7 @@ body.locked {
 }
 @media (max-width: 479.98px) {
   .navbar__body {
+    height: 20px;
     padding: 20px;
   }
 }
@@ -828,5 +830,101 @@ body.locked {
   }
   .subscribe__button {
     width: 100%;
+  }
+}
+.reviews {
+  margin-top: 200px;
+}
+.reviews__cells {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.reviews__cell {
+  background: #000;
+  padding: 50px;
+  border-radius: 32px;
+  margin: 8px;
+}
+
+.cell__text {
+  padding-top: 20px;
+  font-size: 36px;
+  line-height: 43px;
+  color: #fff;
+}
+.cell__author {
+  padding-top: 20px;
+  font-size: 24px;
+  line-height: 29px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.rating {
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
+  line-height: 0.75;
+}
+.rating__body {
+  position: relative;
+}
+.rating__body::before {
+  content: "★★★★★";
+  display: block;
+  color: rgba(255, 255, 255, 0.7);
+}
+.rating__active {
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+.rating__active::before {
+  content: "★★★★★";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  color: #FCFF51;
+}
+.rating__items {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.rating__item {
+  flex: 0 0 20%;
+  height: 100%;
+  opacity: 0;
+  margin: 0;
+}
+.rating__value {
+  font-size: 60%;
+  line-height: 1;
+}
+
+@media (max-width: 991.98px) {
+  .reviews__cells {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 767.98px) {
+  .reviews {
+    margin-top: 100px;
+  }
+}
+@media (max-width: 700px) {
+  .reviews__cells {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .reviews__cell {
+    margin: 8px 0;
+    padding: 40px;
   }
 }/*# sourceMappingURL=style.css.map */
