--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,6 +17,13 @@ body.locked {
   overflow: hidden;
 }
 
+body img {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .wrapper {
   min-height: 100%;
   overflow: hidden;
@@ -59,6 +66,10 @@ body.locked {
   cursor: pointer;
   transition: 0.3s;
   border: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 [class*=__button]:hover {
@@ -87,14 +98,19 @@ body.locked {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 120px;
+  height: 100px;
   padding: 0 50px;
 }
 .navbar__logo {
+  font-weight: 700;
   font-size: 30px;
   color: #fff;
   z-index: 10;
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 .navbar__burger {
   display: none;
@@ -926,5 +942,133 @@ body.locked {
   .reviews__cell {
     margin: 8px 0;
     padding: 40px;
+  }
+}
+.footer {
+  margin-top: 150px;
+  padding: 50px;
+}
+.footer__body {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.footer__logo {
+  cursor: pointer;
+  font-size: 50px;
+  color: #fff;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+.footer__socials img {
+  width: 20px;
+  margin-right: 12px;
+  transition: 0.6s;
+}
+.footer__socials img:hover {
+  transform: scale(1.1);
+}
+.footer__text {
+  display: flex;
+  justify-content: space-around;
+}
+.footer__navigation-link, .footer__info-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 27px;
+  transition: 0.6s;
+}
+.footer__navigation-link:hover, .footer__info-link:hover {
+  color: #118DA8;
+  transform: scale(1.05);
+}
+.footer__icons {
+  display: flex;
+  justify-content: flex-end;
+}
+.footer__icons a {
+  max-width: 32px;
+  margin-top: 16px;
+  margin-right: 18px;
+  transition: 0.6s;
+}
+.footer__icons a:hover {
+  transform: scale(1.1);
+}
+.footer__icon {
+  max-width: 100%;
+}
+
+@media (max-width: 991.98px) {
+  .footer__body {
+    grid-template-columns: none;
+    grid-template-areas: "media text" "icons icons";
+  }
+  .footer__media {
+    grid-area: media;
+  }
+  .footer__text {
+    grid-area: text;
+  }
+  .footer__icons {
+    grid-area: icons;
+    justify-content: flex-start;
+  }
+}
+@media (max-width: 767.98px) {
+  .footer__body {
+    grid-template-areas: "media media" " icons text";
+  }
+  .footer__media {
+    grid-area: media;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer__text {
+    grid-area: text;
+  }
+  .footer__navigation-link {
+    display: none;
+  }
+  .footer__icons {
+    padding-top: 20px;
+    grid-area: icons;
+    justify-content: center;
+  }
+}
+@media (max-width: 550px) {
+  .footer {
+    padding: 20px;
+  }
+  .footer__body {
+    grid-template-areas: "media" "text" "icons";
+  }
+  .footer__media {
+    grid-area: media;
+    flex-direction: column;
+  }
+  .footer__text {
+    padding-top: 20px;
+    grid-area: text;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer__info-list {
+    -moz-column-count: 2;
+         column-count: 2;
+  }
+  .footer__info-link {
+    font-size: 22px;
+    line-height: 35px;
+    margin: 10px 0;
+  }
+  .footer__icons {
+    padding-top: 20px;
+    grid-area: icons;
+    justify-content: center;
   }
 }/*# sourceMappingURL=style.css.map */
