--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1166,20 +1166,88 @@ $almostBlack: #191919;
 }
 
 @media(max-width: 991.98px){
-	.reviews__cells{
-		grid-template-columns: repeat(2, 1fr);
+	.reviews{
+
+		&__cells{
+			grid-template-columns: repeat(2, 1fr);
+		}
+		&__cell {
+			transition: 0.6s;
+			opacity: 0;
+		}
+		&__cell:nth-child(1){
+			transform: translateX(-100%);
+			transition-delay: 0.6s;
+		}
+		&__cell:nth-child(2){
+			transform: translateX(-100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(3){
+			transform: translateX(100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(4){
+			transform: translateX(100%);
+			transition-delay: 0.6s;
+		}
+		&__cell:nth-child(5){
+			transform: translateX(-100%);
+			transition-delay: 0.6s;
+		}
+		&__cell:nth-child(6){
+			transform: translateX(-100%);
+			transition-delay: 0.3s;
+		}
+		&__cell._active{
+			opacity: 1;
+			transform: translateX(0);
+		}
 	}
 }
 @media(max-width: 767.98px){
 	.reviews{margin-top: 100px;}
 }
 @media(max-width: 700px){
-	.reviews__cells{
-		grid-template-columns: repeat(1, 1fr);
-	}
-	.reviews__cell{
-		margin: 8px 0;
-		padding: 40px;
+	.reviews{
+
+		&__cells{
+			grid-template-columns: repeat(1, 1fr);
+		}
+		&__cell{
+			margin: 8px 0;
+			padding: 40px;
+			transition: 0.6s;
+			opacity: 0;
+		}
+		&__cell:nth-child(1){
+			transform: translateX(-100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(2){
+			transform: translateX(100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(3){
+			transform: translateX(-100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(4){
+			transform: translateX(100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(5){
+			transform: translateX(-100%);
+			transition-delay: 0.3s;
+		}
+		&__cell:nth-child(6){
+			transform: translateX(100%);
+			transition-delay: 0.3s;
+		}
+		&__cell._active{
+			opacity: 1;
+			transform: translateX(0);
+		}
 	}
 }
 
