--- a/CSS/style.css
+++ b/CSS/style.css
@@ -297,9 +297,6 @@ body img {
   opacity: 0;
   transform: translate(600px, 0);
 }
-.page-header__icons a:hover {
-  transform: scale(1.1);
-}
 .page-header__icon {
   max-width: 100%;
 }
@@ -321,6 +318,10 @@ body img {
 .page-header__icons a._active {
   transform: translate(0, 0);
   opacity: 1;
+}
+.page-header__icons a:hover {
+  transition: 0.6s;
+  transform: scale(1.1) translate(0, -5px);
 }
 
 @media (max-width: 1299.98px) {
